ENABLE_LANGUAGE(VEDA_CXX)

SET(SRC
	${CMAKE_CURRENT_LIST_DIR}/veda_device.vcpp
	${CMAKE_CURRENT_LIST_DIR}/veda_kernels.vcpp
	${CMAKE_CURRENT_LIST_DIR}/veda_memset.vcpp
)

ADD_LIBRARY		(veda_device SHARED ${SRC})
TARGET_COMPILE_OPTIONS	(veda_device PRIVATE -fopenmp)
SET_TARGET_PROPERTIES 	(veda_device PROPERTIES LINK_FLAGS "-fopenmp -Wl,--version-script=${CMAKE_CURRENT_LIST_DIR}/libveda.map")
SET_TARGET_PROPERTIES	(veda_device PROPERTIES OUTPUT_NAME "veda")

INSTALL(TARGETS veda_device LIBRARY DESTINATION ${VEDA_INSTALL_PATH}/libve)
INSTALL(FILES
	${CMAKE_CURRENT_LIST_DIR}/veda_device.h
	${CMAKE_CURRENT_LIST_DIR}/veda_device_omp.h
	DESTINATION ${VEDA_INSTALL_PATH}/include)
