## Build VEDA ------------------------------------------------------------------
FIND_LIBRARY(LIBUDEV_LIBRARY "libudev.so.1" REQUIRED)
FIND_FILE(LIBUDEV_H "libudev.h")
IF(NOT LIBUDEV_H)
	MESSAGE(FATAL_ERROR "'libudev.h' not found. You might need to install 'systemd-devel'.")
ENDIF()

MARK_AS_ADVANCED(LIBUDEV_H LIBUDEV_LIBRARY)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR})
INCLUDE_DIRECTORIES(${AVEO_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Tungl_INCLUDE_DIRS})

SET(VEDA_SRC)
INCLUDE(${CMAKE_CURRENT_LIST_DIR}/veda/CMakeLists.txt)

ADD_LIBRARY(veda ${VEDA_BUILD_TYPE} ${VEDA_SRC})
ILLYRIAN_TARGET_OPTIONS(veda LINK_MAP ${VEDA_DIST_TYPE}
	SOVERSION 	${VEDA_VERSION}
	DESTINATION	${VEDA_INSTALL_PATH}/lib64
	COMPILE_OPTIONS	"-Wl,-lpthread"
)
TARGET_LINK_LIBRARIES(veda PRIVATE ${AVEO_LIBRARIES} ${LIBUDEV_LIBRARY} ${Tungl_LIBRARY} dl)
IF(NOT VEDA_WITH_SYSTEM_AVEO)
	ADD_DEPENDENCIES(veda aveo_ve1 aveo_ve3)
ENDIF()

## Install Files ---------------------------------------------------------------
INSTALL(FILES
	${CMAKE_CURRENT_LIST_DIR}/veda_version.h
	${CMAKE_CURRENT_LIST_DIR}/veda.h
	${CMAKE_CURRENT_LIST_DIR}/veda_enums.h
	${CMAKE_CURRENT_LIST_DIR}/veda_macros.h
	${CMAKE_CURRENT_LIST_DIR}/veda_types.h
	${CMAKE_CURRENT_LIST_DIR}/veda_ptr.h
DESTINATION ${VEDA_INSTALL_PATH}/include)

