GET_TARGET_PROPERTY(VEDA_BINARY_DIR veda BINARY_DIR)
GET_TARGET_PROPERTY(VEDA_SOURCE_DIR veda SOURCE_DIR)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR})
INCLUDE_DIRECTORIES(${VEDA_BINARY_DIR})
INCLUDE_DIRECTORIES(${VEDA_SOURCE_DIR})
INCLUDE_DIRECTORIES(${AVEO_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Tungl_INCLUDE_DIRS})

ADD_LIBRARY(vera ${VEDA_BUILD_TYPE} ${CMAKE_CURRENT_LIST_DIR}/vera.cpp)
ILLYRIAN_TARGET_OPTIONS(vera LINK_MAP ${VEDA_DIST_TYPE}
	SOVERSION 	${VEDA_VERSION}
	DESTINATION	${VEDA_INSTALL_PATH}/lib64
)
TARGET_LINK_LIBRARIES(vera veda)

INSTALL(FILES
	${CMAKE_CURRENT_LIST_DIR}/vera.h
	${CMAKE_CURRENT_LIST_DIR}/vera_enums.h
	${CMAKE_CURRENT_LIST_DIR}/vera_types.h
DESTINATION ${VEDA_INSTALL_PATH}/include)

INSTALL(FILES
	${CMAKE_CURRENT_LIST_DIR}/vera/api.h
	${CMAKE_CURRENT_LIST_DIR}/vera/enums.h
	${CMAKE_CURRENT_LIST_DIR}/vera/types.h
DESTINATION ${VEDA_INSTALL_PATH}/include/vera)
