INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/../../)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
ENABLE_LANGUAGE(VEDA_C VEDA_CXX)
SET(VEDA_LIBRARY veda)
SET(VERA_LIBRARY vera)
ADD_EXECUTABLE		(FT_VEDA_DEVICE_01 ${CMAKE_CURRENT_LIST_DIR}/FT_VEDA_DEVICE_01.cpp)
TARGET_LINK_LIBRARIES	(FT_VEDA_DEVICE_01 veda)
TARGET_COMPILE_OPTIONS	(FT_VEDA_DEVICE_01 PRIVATE -g)
SET_TARGET_PROPERTIES	(FT_VEDA_DEVICE_01 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE		(FT_VEDA_CONTEXT_01 ${CMAKE_CURRENT_LIST_DIR}/FT_VEDA_CONTEXT_01.cpp)
TARGET_LINK_LIBRARIES	(FT_VEDA_CONTEXT_01 veda -lpthread)
TARGET_COMPILE_OPTIONS	(FT_VEDA_CONTEXT_01 PRIVATE -g )
SET_TARGET_PROPERTIES	(FT_VEDA_CONTEXT_01 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE		(FT_VEDA_mem_01 ${CMAKE_CURRENT_LIST_DIR}/FT_VEDA_mem_01.cpp)
TARGET_LINK_LIBRARIES	(FT_VEDA_mem_01 veda)
TARGET_COMPILE_OPTIONS	(FT_VEDA_mem_01 PRIVATE  -g )
SET_TARGET_PROPERTIES	(FT_VEDA_mem_01 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE		(FT_VEDA_MODULE_01 FT_VEDA_MODULE_01.c)
TARGET_LINK_LIBRARIES	(FT_VEDA_MODULE_01 veda)
ADD_LIBRARY		(veda_module_device SHARED test.vc)
SET_TARGET_PROPERTIES	(FT_VEDA_MODULE_01 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE		(FT_VEDA_SM_01 FT_VEDA_SM_01.cpp)
TARGET_LINK_LIBRARIES	(FT_VEDA_SM_01 veda)
ADD_LIBRARY		(veda_sm_device SHARED test.vcpp)
SET_TARGET_PROPERTIES	(FT_VEDA_SM_01 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE		(FT_VEDA_exec_01 FT_VEDA_exec_01.cpp)
TARGET_LINK_LIBRARIES	(FT_VEDA_exec_01 veda)
ADD_LIBRARY		(veda_ecm_device SHARED test.vcpp)
SET_TARGET_PROPERTIES	(FT_VEDA_exec_01 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

IF(VEDA_WITH_VERA)
	ADD_EXECUTABLE		(FT_VERA_01 FT_VERA_01.cpp)
	TARGET_LINK_LIBRARIES	(FT_VERA_01 veda vera)
	ADD_LIBRARY		(vera_device SHARED test.vcpp)
	SET_TARGET_PROPERTIES	(FT_VERA_01 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")
	INSTALL			(TARGETS vera_device LIBRARY DESTINATION ${VEDA_INSTALL_PATH}/tests)
ENDIF()

INSTALL(TARGETS FT_VEDA_DEVICE_01 FT_VEDA_CONTEXT_01 FT_VEDA_mem_01 FT_VEDA_MODULE_01 FT_VEDA_SM_01 FT_VEDA_exec_01 FT_VERA_01 RUNTIME DESTINATION ${VEDA_INSTALL_PATH}/tests)
INSTALL(TARGETS veda_module_device veda_sm_device veda_ecm_device LIBRARY DESTINATION ${VEDA_INSTALL_PATH}/tests)
INSTALL(FILES veda_utility.sh PERMISSIONS OWNER_READ OWNER_EXECUTE DESTINATION ${VEDA_INSTALL_PATH}/tests)

ADD_TEST(NAME FT_VEDA_Module_01-10 COMMAND FT_VEDA_MODULE_01)
ADD_TEST(NAME FT_VEDA_SM_01-06 COMMAND FT_VEDA_SM_01)
ADD_TEST(NAME FT_VEDA_ECM_01-31 COMMAND FT_VEDA_exec_01)
ADD_TEST(NAME FT_VERA_ECM_01-38 COMMAND FT_VERA_01)
ADD_TEST(NAME FT_VEDA_DEVICE COMMAND FT_VEDA_DEVICE_01)
ADD_TEST(NAME FT_VEDA_CONTEXT COMMAND FT_VEDA_CONTEXT_01)
ADD_TEST(NAME FT_VEDA_MEMORY COMMAND FT_VEDA_mem_01)
