INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/../../)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
ENABLE_LANGUAGE(VEDA_C VEDA_CXX)
SET(VEDA_LIBRARY veda)
SET(VERA_LIBRARY vera)
ADD_EXECUTABLE		(FT_VEDA_DEVICE_01 ${CMAKE_CURRENT_LIST_DIR}/FT_VEDA_DEVICE_01.cpp)
TARGET_LINK_LIBRARIES	(FT_VEDA_DEVICE_01 veda)
SET_TARGET_PROPERTIES	(FT_VEDA_DEVICE_01 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE		(FT_VEDA_CONTEXT_01 ${CMAKE_CURRENT_LIST_DIR}/FT_VEDA_CONTEXT_01.cpp)
TARGET_LINK_LIBRARIES	(FT_VEDA_CONTEXT_01 veda -lpthread)
TARGET_COMPILE_OPTIONS	(FT_VEDA_CONTEXT_01 PRIVATE -g)
SET_TARGET_PROPERTIES	(FT_VEDA_CONTEXT_01 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE		(FT_VEDA_mem_01 ${CMAKE_CURRENT_LIST_DIR}/FT_VEDA_mem_01.cpp)
TARGET_LINK_LIBRARIES	(FT_VEDA_mem_01 veda)
TARGET_COMPILE_OPTIONS	(FT_VEDA_mem_01 PRIVATE -g)
SET_TARGET_PROPERTIES	(FT_VEDA_mem_01 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE		(FT_VEDA_mem_HMem_01 ${CMAKE_CURRENT_LIST_DIR}/FT_VEDA_mem_HMem_01.cpp)
TARGET_LINK_LIBRARIES	(FT_VEDA_mem_HMem_01 veda)
TARGET_COMPILE_OPTIONS	(FT_VEDA_mem_HMem_01 PRIVATE -g)
SET_TARGET_PROPERTIES	(FT_VEDA_mem_HMem_01 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64 ")

ADD_EXECUTABLE          (FT_VEDA_mem_HMem_02 ${CMAKE_CURRENT_LIST_DIR}/FT_VEDA_mem_HMem_02.cpp)
TARGET_LINK_LIBRARIES   (FT_VEDA_mem_HMem_02 veda)
TARGET_COMPILE_OPTIONS  (FT_VEDA_mem_HMem_02 PRIVATE -g)
SET_TARGET_PROPERTIES   (FT_VEDA_mem_HMem_02 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64 ")

ADD_EXECUTABLE          (FT_VEDA_mem_HMem_03 ${CMAKE_CURRENT_LIST_DIR}/FT_VEDA_mem_HMem_03.cpp)
TARGET_LINK_LIBRARIES   (FT_VEDA_mem_HMem_03 veda)
TARGET_COMPILE_OPTIONS  (FT_VEDA_mem_HMem_03 PRIVATE -g)
SET_TARGET_PROPERTIES   (FT_VEDA_mem_HMem_03 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64 ")

ADD_EXECUTABLE          (FT_VEDA_mem_HMem_04 ${CMAKE_CURRENT_LIST_DIR}/FT_VEDA_mem_HMem_04.cpp)
TARGET_LINK_LIBRARIES   (FT_VEDA_mem_HMem_04 veda)
TARGET_COMPILE_OPTIONS  (FT_VEDA_mem_HMem_04 PRIVATE -g)
SET_TARGET_PROPERTIES   (FT_VEDA_mem_HMem_04 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64 ")

ADD_EXECUTABLE          (FT_VEDA_mem_HMem_05 ${CMAKE_CURRENT_LIST_DIR}/FT_VEDA_mem_HMem_05.cpp)
TARGET_LINK_LIBRARIES   (FT_VEDA_mem_HMem_05 veda)
TARGET_COMPILE_OPTIONS  (FT_VEDA_mem_HMem_05 PRIVATE -g)
SET_TARGET_PROPERTIES   (FT_VEDA_mem_HMem_05 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64 ")

ADD_EXECUTABLE          (FT_VEDA_mem_HMem_06 ${CMAKE_CURRENT_LIST_DIR}/FT_VEDA_mem_HMem_06.cpp)
TARGET_LINK_LIBRARIES   (FT_VEDA_mem_HMem_06 veda)
TARGET_COMPILE_OPTIONS  (FT_VEDA_mem_HMem_06 PRIVATE -g)
SET_TARGET_PROPERTIES   (FT_VEDA_mem_HMem_06 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64 ")

ADD_EXECUTABLE          (FT_VEDA_mem_HMem_07 ${CMAKE_CURRENT_LIST_DIR}/FT_VEDA_mem_HMem_07.cpp)
TARGET_LINK_LIBRARIES   (FT_VEDA_mem_HMem_07 veda)
TARGET_COMPILE_OPTIONS  (FT_VEDA_mem_HMem_07 PRIVATE -g)
SET_TARGET_PROPERTIES   (FT_VEDA_mem_HMem_07 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64 ")

ADD_EXECUTABLE          (FT_VEDA_mem_HMem_08 ${CMAKE_CURRENT_LIST_DIR}/FT_VEDA_mem_HMem_08.cpp)
TARGET_LINK_LIBRARIES   (FT_VEDA_mem_HMem_08 veda)
TARGET_COMPILE_OPTIONS  (FT_VEDA_mem_HMem_08 PRIVATE -g)
SET_TARGET_PROPERTIES   (FT_VEDA_mem_HMem_08 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64 ")
ADD_LIBRARY             (ve_hmem_ptr SHARED ../device/ve_hmem_ptr.vcpp)

ADD_EXECUTABLE		(FT_VEDA_MODULE_01 FT_VEDA_MODULE_01.c)
TARGET_LINK_LIBRARIES	(FT_VEDA_MODULE_01 veda)
ADD_LIBRARY		(veda_module_device SHARED test.vc)
SET_TARGET_PROPERTIES	(FT_VEDA_MODULE_01 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64" C_STANDARD 11)

ADD_EXECUTABLE		(FT_VEDA_SM_01 FT_VEDA_SM_01.cpp)
TARGET_COMPILE_OPTIONS	(FT_VEDA_SM_01 PRIVATE -g)
TARGET_LINK_LIBRARIES	(FT_VEDA_SM_01 ${VEDA_LIBRARY})
ADD_LIBRARY		(veda_sm_device SHARED test.vcpp)
SET_TARGET_PROPERTIES	(FT_VEDA_SM_01 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE		(FT_VEDA_exec_01 FT_VEDA_exec_01.cpp)
#ADD_EXECUTABLE          (FT_VEDA_01 FT_VEDA_01.cpp)
#TARGET_COMPILE_OPTIONS  (FT_VEDA_01 PRIVATE -g)
#TARGET_LINK_LIBRARIES   (FT_VEDA_01 ${VEDA_LIBRARY}  ${VERA_LIBRARY})

TARGET_LINK_LIBRARIES	(FT_VEDA_exec_01 veda)
TARGET_COMPILE_OPTIONS	(FT_VEDA_exec_01 PRIVATE -g)
ADD_LIBRARY		(veda_ecm_device SHARED test.vcpp)
SET_TARGET_PROPERTIES	(FT_VEDA_exec_01 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

IF(VEDA_WITH_VERA)
	ADD_EXECUTABLE		(FT_VERA_01 FT_VERA_01.cpp)
	TARGET_COMPILE_OPTIONS	(FT_VERA_01 PRIVATE -g)
	TARGET_LINK_LIBRARIES	(FT_VERA_01 veda vera)
	ADD_LIBRARY		(vera_device SHARED test.vcpp)
	SET_TARGET_PROPERTIES	(FT_VERA_01 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")
	INSTALL			(TARGETS vera_device LIBRARY DESTINATION ${VEDA_INSTALL_PATH}/tests)
ENDIF()

INSTALL(TARGETS FT_VEDA_DEVICE_01 FT_VEDA_CONTEXT_01 FT_VEDA_mem_01 FT_VEDA_mem_HMem_01 FT_VEDA_mem_HMem_02 FT_VEDA_mem_HMem_03 FT_VEDA_mem_HMem_04 FT_VEDA_mem_HMem_05 FT_VEDA_mem_HMem_06 FT_VEDA_mem_HMem_07 FT_VEDA_mem_HMem_08 FT_VEDA_MODULE_01 FT_VEDA_SM_01 FT_VEDA_exec_01 FT_VERA_01 RUNTIME DESTINATION ${VEDA_INSTALL_PATH}/tests)
INSTALL(TARGETS veda_module_device veda_sm_device veda_ecm_device ve_hmem_ptr LIBRARY DESTINATION ${VEDA_INSTALL_PATH}/tests)
INSTALL(FILES veda_utility.sh PERMISSIONS OWNER_READ OWNER_EXECUTE DESTINATION ${VEDA_INSTALL_PATH}/tests)
INSTALL(FILES veda_utility.sh PERMISSIONS OWNER_READ OWNER_EXECUTE DESTINATION ${CMAKE_INSTALL_PREFIX}/tests/FT/)

add_test (NAME FT_VEDA_Module COMMAND ${CMAKE_INSTALL_PREFIX}/${VEDA_INSTALL_PATH}/tests/FT_VEDA_MODULE_01)
add_test (NAME FT_VEDA_SM COMMAND ${CMAKE_INSTALL_PREFIX}/${VEDA_INSTALL_PATH}/tests/FT_VEDA_SM_01)
add_test (NAME FT_VEDA_ECM COMMAND ${CMAKE_INSTALL_PREFIX}/${VEDA_INSTALL_PATH}/tests/FT_VEDA_exec_01)
add_test (NAME FT_VERA COMMAND ${CMAKE_INSTALL_PREFIX}/${VEDA_INSTALL_PATH}/tests/FT_VERA_01)
add_test (NAME FT_VEDA_DEVICE COMMAND ${CMAKE_INSTALL_PREFIX}/${VEDA_INSTALL_PATH}/tests/FT_VEDA_DEVICE_01)
add_test (NAME FT_VEDA_CONTEXT COMMAND ${CMAKE_INSTALL_PREFIX}/${VEDA_INSTALL_PATH}/tests/FT_VEDA_CONTEXT_01)
add_test (NAME FT_VEDA_MEMORY COMMAND ${CMAKE_INSTALL_PREFIX}/${VEDA_INSTALL_PATH}/tests/FT_VEDA_mem_01)
add_test (NAME FT_VEDA_MEMORY_HMEM_01 COMMAND ${CMAKE_INSTALL_PREFIX}/${VEDA_INSTALL_PATH}/tests/FT_VEDA_mem_HMem_01)
add_test (NAME FT_VEDA_MEMORY_HMEM_02 COMMAND ${CMAKE_INSTALL_PREFIX}/${VEDA_INSTALL_PATH}/tests/FT_VEDA_mem_HMem_02)
add_test (NAME FT_VEDA_MEMORY_HMEM_03 COMMAND ${CMAKE_INSTALL_PREFIX}/${VEDA_INSTALL_PATH}/tests/FT_VEDA_mem_HMem_03)
add_test (NAME FT_VEDA_MEMORY_HMEM_04 COMMAND ${CMAKE_INSTALL_PREFIX}/${VEDA_INSTALL_PATH}/tests/FT_VEDA_mem_HMem_04) 
add_test (NAME FT_VEDA_MEMORY_HMEM_05 COMMAND ${CMAKE_INSTALL_PREFIX}/${VEDA_INSTALL_PATH}/tests/FT_VEDA_mem_HMem_05)
add_test (NAME FT_VEDA_MEMORY_HMEM_06 COMMAND ${CMAKE_INSTALL_PREFIX}/${VEDA_INSTALL_PATH}/tests/FT_VEDA_mem_HMem_06)
add_test (NAME FT_VEDA_MEMORY_HMEM_07 COMMAND ${CMAKE_INSTALL_PREFIX}/${VEDA_INSTALL_PATH}/tests/FT_VEDA_mem_HMem_07)
add_test (NAME FT_VEDA_MEMORY_HMEM_08 COMMAND ${CMAKE_INSTALL_PREFIX}/${VEDA_INSTALL_PATH}/tests/FT_VEDA_mem_HMem_08)
set_tests_properties(
	FT_VEDA_MEMORY
	FT_VEDA_MEMORY_HMEM_01
	FT_VEDA_MEMORY_HMEM_02
        FT_VEDA_MEMORY_HMEM_03
        FT_VEDA_MEMORY_HMEM_04
        FT_VEDA_MEMORY_HMEM_05
        FT_VEDA_MEMORY_HMEM_06
        FT_VEDA_MEMORY_HMEM_07
        FT_VEDA_MEMORY_HMEM_08
	FT_VEDA_CONTEXT
        PROPERTIES ENVIRONMENT VE_LD_LIBRARY_PATH=${CMAKE_INSTALL_PREFIX}/${VEDA_INSTALL_PATH}/tests/)
