IF(OFF)
	FIND_PACKAGE(MPI REQUIRED)
	INCLUDE_DIRECTORIES(${MPI_C_INCLUDE_DIRS})
	
	ADD_EXECUTABLE		(QIP_VEDA_02 QIP_VEDA_02.cpp)
	TARGET_LINK_LIBRARIES	(QIP_VEDA_02 veda  vera mpi)
	TARGET_COMPILE_OPTIONS	(QIP_VEDA_02 PRIVATE -std=c++11)
	ADD_LIBRARY		(QIP_VEDA_02_ve SHARED ../device/QIP_VEDA_02.vcpp)

	INSTALL(TARGETS QIP_VEDA_02 RUNTIME DESTINATION ${VEDA_INSTALL_PATH}/tests)
	INSTALL(TARGETS QIP_VEDA_02_ve LIBRARY DESTINATION ${VEDA_INSTALL_PATH}/tests)
ENDIF()


ADD_EXECUTABLE		(QIP_VEDA_01 QIP_VEDA_01.cpp)
TARGET_LINK_LIBRARIES	(QIP_VEDA_01 veda  vera)
TARGET_COMPILE_OPTIONS	(QIP_VEDA_01 PRIVATE -std=c++11)
ADD_LIBRARY		(vefortran SHARED ../device/QIP_VEDA_01.vf90)

ADD_EXECUTABLE		(QIP_VEDA_04 QIP_VEDA_04.cpp)
TARGET_COMPILE_OPTIONS	(QIP_VEDA_04 PRIVATE -std=c++11)
TARGET_LINK_LIBRARIES	(QIP_VEDA_04 veda  vera)


ADD_EXECUTABLE		(QIP_VEDA_03 QIP_VEDA_03.cpp)
TARGET_LINK_LIBRARIES	(QIP_VEDA_03 veda  vera)
TARGET_COMPILE_OPTIONS	(QIP_VEDA_03 PRIVATE -std=c++11)
ADD_LIBRARY		(QIP_VEDA_03_ve SHARED ../device/QIP_VEDA_03.vcpp)

ADD_EXECUTABLE          (ST_VEDA_04 ST_VEDA_04.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_04 veda  vera)
TARGET_COMPILE_OPTIONS  (ST_VEDA_04 PRIVATE -fopenmp -std=c++11 -g)
SET_TARGET_PROPERTIES   (ST_VEDA_04 PROPERTIES LINK_FLAGS -fopenmp)
ADD_LIBRARY		(omp_func_ve SHARED ../device/ve_omp_func.vcpp)

ADD_EXECUTABLE          (ST_VEDA_05 ST_VEDA_05.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_05 veda  vera)
TARGET_COMPILE_OPTIONS  (ST_VEDA_05 PRIVATE -fopenmp -std=c++11 -g)
SET_TARGET_PROPERTIES   (ST_VEDA_05 PROPERTIES LINK_FLAGS -fopenmp)

ADD_EXECUTABLE          (ST_VEDA_06 ST_VEDA_06.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_06 veda  vera)
TARGET_COMPILE_OPTIONS  (ST_VEDA_06 PRIVATE -fopenmp -std=c++11 -g)
SET_TARGET_PROPERTIES   (ST_VEDA_06 PROPERTIES LINK_FLAGS -fopenmp)

ADD_EXECUTABLE          (ST_VEDA_07 ST_VEDA_07.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_07 veda  vera)
TARGET_COMPILE_OPTIONS	(ST_VEDA_07 PRIVATE -std=c++11)

ADD_EXECUTABLE          (ST_VEDA_08 ST_VEDA_08.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_08 veda  vera)
TARGET_COMPILE_OPTIONS	(ST_VEDA_08 PRIVATE -std=c++11)

ADD_EXECUTABLE          (ST_VEDA_09 ST_VEDA_09.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_09 veda  vera)
TARGET_COMPILE_OPTIONS	(ST_VEDA_09 PRIVATE -std=c++11)
SET_TARGET_PROPERTIES   (ST_VEDA_09 PROPERTIES LINK_FLAGS -pthread)

ADD_EXECUTABLE          (ST_VEDA_10 ST_VEDA_10.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_10 veda  vera)
TARGET_COMPILE_OPTIONS	(ST_VEDA_10 PRIVATE -std=c++11)
SET_TARGET_PROPERTIES   (ST_VEDA_10 PROPERTIES LINK_FLAGS -pthread)

ADD_EXECUTABLE          (ST_VEDA_11 ST_VEDA_11.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_11 veda  vera)
TARGET_COMPILE_OPTIONS	(ST_VEDA_11 PRIVATE -std=c++11)

ADD_EXECUTABLE          (ST_VEDA_12 ST_VEDA_12.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_12 veda  vera)
TARGET_COMPILE_OPTIONS	(ST_VEDA_12 PRIVATE -std=c++11)

ADD_EXECUTABLE          (ST_VEDA_13 ST_VEDA_13.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_13 veda  vera)
TARGET_COMPILE_OPTIONS	(ST_VEDA_13 PRIVATE -std=c++11)

ADD_EXECUTABLE          (ST_VEDA_14 ST_VEDA_14.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_14 veda  vera)
TARGET_COMPILE_OPTIONS	(ST_VEDA_14 PRIVATE -std=c++11)

ADD_EXECUTABLE          (ST_VEDA_15 ST_VEDA_15.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_15 veda  vera)
TARGET_COMPILE_OPTIONS	(ST_VEDA_15 PRIVATE -std=c++11)
SET_TARGET_PROPERTIES   (ST_VEDA_15 PROPERTIES LINK_FLAGS -pthread)

ADD_EXECUTABLE          (ST_VEDA_16 ST_VEDA_16.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_16 veda  vera)
TARGET_COMPILE_OPTIONS	(ST_VEDA_16 PRIVATE -std=c++11)
SET_TARGET_PROPERTIES   (ST_VEDA_16 PROPERTIES LINK_FLAGS -pthread)

INSTALL(TARGETS QIP_VEDA_01 QIP_VEDA_03 QIP_VEDA_04 ST_VEDA_04 ST_VEDA_05 ST_VEDA_06 ST_VEDA_07 ST_VEDA_08 ST_VEDA_09 ST_VEDA_10 ST_VEDA_11 ST_VEDA_12 ST_VEDA_13 ST_VEDA_14 ST_VEDA_15 ST_VEDA_16 RUNTIME DESTINATION ${VEDA_INSTALL_PATH}/tests)
INSTALL(TARGETS vefortran QIP_VEDA_03_ve omp_func_ve LIBRARY DESTINATION ${VEDA_INSTALL_PATH}/tests)

