ADD_EXECUTABLE		(ST_VEDA_01 ST_VEDA_01.cpp)
TARGET_LINK_LIBRARIES	(ST_VEDA_01 veda vera)
ADD_LIBRARY		(ST_VEDA_01_ve SHARED ../device/ST_VEDA_01.vcpp)

ADD_EXECUTABLE          (ST_VEDA_02 ST_VEDA_02.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_02 veda vera)
ADD_LIBRARY             (ST_VEDA_02_ve SHARED ../device/ST_VEDA_02.vcpp)

ADD_EXECUTABLE          (ST_VEDA_03 ST_VEDA_03.cpp)
TARGET_LINK_LIBRARIES   (ST_VEDA_03 veda vera)

INSTALL(TARGETS ST_VEDA_01 ST_VEDA_02 ST_VEDA_03 RUNTIME DESTINATION ${VEDA_INSTALL_PATH}/tests)
INSTALL(TARGETS ST_VEDA_01_ve ST_VEDA_02_ve LIBRARY DESTINATION ${VEDA_INSTALL_PATH}/tests)

