ADD_LIBRARY		(veda_test_ve SHARED ${CMAKE_CURRENT_LIST_DIR}/test.vcpp)
TARGET_COMPILE_OPTIONS	(veda_test_ve PRIVATE -fopenmp)
SET_TARGET_PROPERTIES	(veda_test_ve PROPERTIES LINK_FLAGS "-Wl,-zdefs -fopenmp")
TARGET_LINK_LIBRARIES	(veda_test_ve veda_device)
SET_TARGET_PROPERTIES	(veda_test_ve PROPERTIES OUTPUT_NAME "veda_test")
INSTALL			(TARGETS veda_test_ve LIBRARY DESTINATION ${VEDA_INSTALL_PATH}/tests)

ADD_LIBRARY		(issue_836_ve SHARED ${CMAKE_CURRENT_LIST_DIR}/issue_836.vc)
SET_TARGET_PROPERTIES	(issue_836_ve PROPERTIES LINK_FLAGS "-Wl,-zdefs")
TARGET_LINK_LIBRARIES	(issue_836_ve veda_device)
SET_TARGET_PROPERTIES	(issue_836_ve PROPERTIES OUTPUT_NAME "issue_836")
INSTALL			(TARGETS issue_836_ve LIBRARY DESTINATION ${VEDA_INSTALL_PATH}/tests)