ADD_EXECUTABLE(veda_test1 ${CMAKE_CURRENT_LIST_DIR}/veda_1.cpp)
TARGET_LINK_LIBRARIES(veda_test1 veda)
SET_TARGET_PROPERTIES(veda_test1 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE(veda_test2 ${CMAKE_CURRENT_LIST_DIR}/veda_2.cpp)
TARGET_LINK_LIBRARIES(veda_test2 veda)
SET_TARGET_PROPERTIES(veda_test2 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE(veda_test3 ${CMAKE_CURRENT_LIST_DIR}/veda_3.cpp)
TARGET_LINK_LIBRARIES(veda_test3 veda)
SET_TARGET_PROPERTIES(veda_test3 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE(veda_test4 ${CMAKE_CURRENT_LIST_DIR}/veda_4.cpp)
TARGET_LINK_LIBRARIES(veda_test4 veda)
SET_TARGET_PROPERTIES(veda_test4 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE(veda_test5 ${CMAKE_CURRENT_LIST_DIR}/veda_5.cpp)
TARGET_LINK_LIBRARIES(veda_test5 veda)
SET_TARGET_PROPERTIES(veda_test5 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE(veda_test6 ${CMAKE_CURRENT_LIST_DIR}/veda_6.c)
TARGET_LINK_LIBRARIES(veda_test6 veda)
SET_TARGET_PROPERTIES(veda_test6 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE(veda_test7 ${CMAKE_CURRENT_LIST_DIR}/veda_7.cpp)
TARGET_LINK_LIBRARIES(veda_test7 veda)
SET_TARGET_PROPERTIES(veda_test7 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE(veda_memset ${CMAKE_CURRENT_LIST_DIR}/veda_memset.cpp)
TARGET_LINK_LIBRARIES(veda_memset veda)
SET_TARGET_PROPERTIES(veda_memset PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE(veda_memcpy ${CMAKE_CURRENT_LIST_DIR}/veda_memcpy.cpp)
TARGET_LINK_LIBRARIES(veda_memcpy veda)
SET_TARGET_PROPERTIES(veda_memcpy PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE(veda_template ${CMAKE_CURRENT_LIST_DIR}/veda_template.cpp)
TARGET_LINK_LIBRARIES(veda_template veda ${Tungl_LIBRARY})
TARGET_INCLUDE_DIRECTORIES(veda_template PRIVATE ${Tungl_INCLUDE_DIRS})
SET_TARGET_PROPERTIES(veda_template PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE(veda_cpp ${CMAKE_CURRENT_LIST_DIR}/veda_cpp.cpp)
TARGET_LINK_LIBRARIES(veda_cpp veda ${Tungl_LIBRARY})
TARGET_INCLUDE_DIRECTORIES(veda_cpp PRIVATE ${Tungl_INCLUDE_DIRS})
SET_TARGET_PROPERTIES(veda_cpp PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE(veda_mpi ${CMAKE_CURRENT_LIST_DIR}/veda_mpi.cpp)
TARGET_LINK_LIBRARIES(veda_mpi veda)
SET_TARGET_PROPERTIES(veda_mpi PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE(veda_env ${CMAKE_CURRENT_LIST_DIR}/veda_env.cpp)
TARGET_LINK_LIBRARIES(veda_env veda)
SET_TARGET_PROPERTIES(veda_env PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE(veda_cnt ${CMAKE_CURRENT_LIST_DIR}/veda_cnt.cpp)
TARGET_LINK_LIBRARIES(veda_cnt veda)
SET_TARGET_PROPERTIES(veda_cnt PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

ADD_EXECUTABLE(veda_profiler ${CMAKE_CURRENT_LIST_DIR}/veda_profiler.cpp)
TARGET_LINK_LIBRARIES(veda_profiler veda)
SET_TARGET_PROPERTIES(veda_profiler PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

INSTALL(TARGETS veda_test1 veda_test2 veda_test3 veda_test4 veda_test5 veda_test6 veda_test7 veda_mpi veda_memset veda_memcpy veda_template veda_env veda_cnt veda_profiler veda_cpp RUNTIME DESTINATION ${VEDA_INSTALL_PATH}/tests)
INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/veda_env.sh DESTINATION ${VEDA_INSTALL_PATH}/tests PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

IF(VEDA_WITH_VERA)
	GET_TARGET_PROPERTY(VERA_SOURCE_DIR vera SOURCE_DIR)
	INCLUDE_DIRECTORIES(${VERA_SOURCE_DIR})

	ADD_EXECUTABLE(vera_test1 ${CMAKE_CURRENT_LIST_DIR}/vera_1.cpp)
	TARGET_LINK_LIBRARIES(vera_test1 vera)
	SET_TARGET_PROPERTIES(vera_test1 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

	ADD_EXECUTABLE(vera_test2 ${CMAKE_CURRENT_LIST_DIR}/vera_2.cpp)
	TARGET_LINK_LIBRARIES(vera_test2 vera)
	SET_TARGET_PROPERTIES(vera_test2 PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

	INSTALL(TARGETS vera_test1 vera_test2 RUNTIME DESTINATION ${VEDA_INSTALL_PATH}/tests)
ENDIF()