CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(VEDA_HELLO_WORLD LANGUAGES CXX)

SET(CMAKE_MODULE_PATH /opt/nec/ve/share/veda/cmake)
FIND_PACKAGE(VE)

ENABLE_LANGUAGE(VEDA_CXX)

SET(CMAKE_BUILD_TYPE RELEASE)
INCLUDE_DIRECTORIES(${VEDA_INCLUDES})

ADD_EXECUTABLE			(hello_world host.cpp)
TARGET_LINK_LIBRARIES		(hello_world ${VEDA_LIBRARY})
ADD_LIBRARY			(hello_world_device SHARED device.vcpp)
