CMAKE_MINIMUM_REQUIRED(VERSION 3.11)
enable_testing()

PROJECT(VEDA_HELLO_WORLD)
# LANGUAGES CXX)

SET(CMAKE_MODULE_PATH /opt/nec/ve/share/veda/cmake)
FIND_PACKAGE(VEDA)

ENABLE_LANGUAGE(VEDA_CXX)

SET(CMAKE_BUILD_TYPE RELEASE)
INCLUDE_DIRECTORIES(${VEDA_INCLUDE_DIRS})

ADD_EXECUTABLE			(hello_world host.cpp)
TARGET_LINK_LIBRARIES		(hello_world ${VEDA_LIBRARY})
TARGET_COMPILE_OPTIONS		(hello_world PRIVATE -std=c++11)	
ADD_LIBRARY			(hello_world_device SHARED device.vcpp)
add_test(NAME hello_world COMMAND hello_world)
