CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

PROJECT(VEDA_HELLO_WORLD)

SET(CMAKE_MODULE_PATH /opt/nec/ve/share/veda/cmake)
FIND_PACKAGE(VEDA)

ENABLE_LANGUAGE(VEDA_Fortran)

SET(CMAKE_BUILD_TYPE RELEASE)
INCLUDE_DIRECTORIES(${VEDA_INCLUDE_DIRS})

ADD_EXECUTABLE			(hello_world host.c)
TARGET_LINK_LIBRARIES	(hello_world ${VEDA_LIBRARY})
ADD_LIBRARY				(hello_world_device SHARED device.vf90)
